# nex-client

./: Cargo.toml  README.md
src/: lib.rs  utils.rs
src/api/: mod.rs
src/data/: signatures.rs
src/nex/: mod.rs  module_handler.rs
src/nex/modules/: air_jump.rs  air_speed.rs  mod.rs
src/types/: actor.rs  client_instance.rs  controller.rs  entity.rs  game_data.rs  game_mode.rs  local_player.rs  mod.rs  player.rs  raknet_instance.rs
