[package]
name = "rime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "*", features = ["consoleapi", "psapi", "libloaderapi"]}
chiter = "*"
open = "*"

[lib]
crate-type = ["dylib"]
